// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a list of repairs with content 1`] = `
<glamorous.Div
  backgroundColor="rgba(255,255,255,.7)"
  height="100%"
>
  <RepairRow
    repair={
      Object {
        "id": 1,
        "title": "Test repair 1",
      }
    }
  />
  <RepairRow
    repair={
      Object {
        "id": 1,
        "title": "Test repair 1",
      }
    }
  />
</glamorous.Div>
`;

exports[`renders an empty list of repairs 1`] = `
<glamorous.Div
  backgroundColor="rgba(255,255,255,.7)"
  height="100%"
>
  <EmptyRepairsList
    canAddRepairs={true}
  />
</glamorous.Div>
`;
